confidgured display of each post and included author name etc

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,9 @@ main {
 header{
   display: flex;
   justify-content: space-between;
+  margin-top: 20px;
   margin-bottom: 50px;
+  align-items: center;
 }
 header a {
   text-decoration: none;
@@ -25,4 +27,20 @@ header a.logo{
 header nav{
   display: flex;
   gap: 15px
+}
+
+img {
+  max-width: 100%;
+}
+
+div.post{
+  display: grid;
+  grid-template-columns: 0.8fr 1.2fr;
+  gap:20px;
+  margin-bottom: 30px;
+
+}
+div.post div.texts h2{
+  margin: 0;
+  font-size: 1.6rem;
 }
